--- a/litreview/website/templates/website/main.html
+++ b/litreview/website/templates/website/main.html
@@ -5,9 +5,9 @@
         <title>
             landing page
         </title>
-        <link rel="stylesheet" href="{% static 'website/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'website/styles.css' %}" />
     </head>
     <body>
-       {% block content %}{% endblock %}
+       {% block content %} {% endblock %}
     </body>
 </html>
