--- a/litreview/website/templates/website/ticket_snippet.html
+++ b/litreview/website/templates/website/ticket_snippet.html
@@ -1,3 +1,13 @@
 <div>
-    
+    <div>
+        {% if post.user == user %}
+            Vous avez
+        {% else %}
+            {{post.user}} a
+        {% endif %}
+            publié une review
+    </div>
+    <div>
+        <h1>{{post.title}}</h1>
+    </div>     
 </div>
