--- a/litreview/website/templates/website/feed.html
+++ b/litreview/website/templates/website/feed.html
@@ -1,6 +1,10 @@
 
 {% extends "website/main.html" %}
 
+{% block title %}
+    Welcome {{user}}
+{% endblock %}
+
 {% block content %}
     <div class="feed__block">
         {% for post in posts %}
