--- a/litreview/website/templates/website/main.html
+++ b/litreview/website/templates/website/main.html
@@ -15,6 +15,7 @@
             <ul class="nav__bar__block">
                 <li><a href="">LITReview</a></li>
                 <li><a href="/feed">Flux</a></li>
+                <li><a href="/posts">Posts</a></li>
                 <li><a href="/subscription">Abonnements</a></li>
                 <li><a href="/log_out">Se Deconnecter</a></li>
             </ul>
