--- a/litreview/website/static/website/styles.css
+++ b/litreview/website/static/website/styles.css
@@ -4,24 +4,15 @@
     justify-content: flex-end;
     align-content: center;
     list-style-type: none;
-    border: 1px solid black;
-    width:auto;
 }
 
 .nav__bar__block li{
     margin: 10px;
 }
 
-.nav__bar__block li:first-child{
+.nav__bar__block:first-child{
     flex-grow: 2;
-    border: 5px red solid;
     margin-left: 50%;
-}
-
-.nav__bar__block li:first-child a{
-    display: block;
-    translate: -50% 0%;
-    color:red;
 }
 
 .feed__button{
@@ -43,77 +34,4 @@ button{
 button:hover{
     background-color: black;
     color:white;
-}
-
-.feed__block{
-    display: block;
-    align-items: center;
-    margin-left:auto;
-    margin-right: auto;
-    width: 80%;
-}
-
-.ticket__block{
-    border: 1pt solid black;
-}
-
-.ticket__header{
-    display: flex;
-    justify-content: space-between;
-    margin: 0.5rem 1rem 0rem 1rem; 
-}
-
-.ticket__content{
-    padding:1rem;
-    display:grid;
-    grid-template: "title title title" 2rem "picture descrip descrip" 1fr "picture button button" auto / 1fr 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-    height: fit-content;
-    grid-auto-flow: dense;
-}
-
-.ticket__title{
-    grid-area: title;
-    font-size: larger;
-    color:red;
-    padding: 1rem 0rem 1rem 0rem;
-}
-
-.ticket__picture{
-    grid-area: picture;
-    justify-self: center;
-    align-self  center;
-}
-
-.ticket__picture img{
-    display:block;
-    max-height: 200px;
-    min-height: 150px;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-
-.ticket__description{
-    align-self:flex-start;
-    grid-area: descrip; 
-}
-
-.ticket__review__button{
-    grid-area: button;
-    align-self: center;
-    justify-self: right;
-    padding-right: 2rem;
-    width: auto;
-    height: auto;
-}
-
-.ticket__review__button button{
-    width: fit-content;
-    padding: 1rem;
-} 
-
-.review__block{
-    border: 1pt solid black
 }
