--- a/litreview/website/templates/website/main.html
+++ b/litreview/website/templates/website/main.html
@@ -8,6 +8,7 @@
             {% block title %}{% endblock %}
         </title>
         <link rel="stylesheet" href="{% static 'website/styles.css' %}" type="text/css" />
+        {% block extrahead %}{% endblock %}
     </head>
 
     <body>
@@ -23,4 +24,7 @@
         {% block content %} {% endblock %}
     </body>
 
+    <footer>
+        {% block extrafooter %}{% endblock %}
+    </footer>
 </html>
