--- a/litreview/website/templates/website/ticket_snippet.html
+++ b/litreview/website/templates/website/ticket_snippet.html
@@ -16,8 +16,10 @@
         <div class="ticket__picture">
             <img src="{{post.image.url}}" alt="image du livre">
         </div>
-        <div class="ticket__review__button">
-            <button id="review__button" type="button">Créer une critique</button>
-        </div>
+        {% if not post.user_reviewed_ticket %}
+            <div class="ticket__review__button">
+                <button id="review__button" type="button">Créer une critique</button>
+            </div>
+        {% endif %}
     </div>
 </div>
