--- a/litreview/website/templates/website/main.html
+++ b/litreview/website/templates/website/main.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="author" content="Payssan Jonathan">
         <title>
-            {% block title %}{% endblock %}
+            {% block title %}{{name}}{% endblock %}
         </title>
         <link rel="stylesheet" href="{% static 'website/styles.css' %}" type="text/css" />
         {% block extrahead %}{% endblock %}
@@ -18,8 +18,11 @@
                 <li><a href="/feed">Flux</a></li>
                 <li><a href="/posts">Posts</a></li>
                 <li><a href="/subscription">Abonnements</a></li>
-                <li><a href="/log_out">Se Deconnecter</a></li>
-            </ul>
+                <li>{% if user.is_authenticated %}
+                        <a href="{% url 'logout' %}">Déconnecter {{user.username}}</a></li>
+                    {% else %}
+                        <a href="{% url 'login'%}">Se connecter</a></li>
+            </ul>   {% endif %}
         </nav>
         {% block content %} {% endblock %}
     </body>
