--- a/litreview/authentication/static/authentication/signup.css
+++ b/litreview/authentication/static/authentication/signup.css
@@ -4,49 +4,20 @@
 }
 
 form {
-    display: grid;
-    grid-template: "blank username error_user" 1fr "blank pwd1 error_pwd1" 1fr "blank pwd2 error_pwd2" 1fr/ 1fr 1fr 1fr;
-    /* flex-direction: column; */
-    align-items: center;
+    display: block;
+    margin-left: 50%;
 }
 
-.control{
-    width:60%;
-}
-
-.error{
-    color: red;
-    margin: 0rem;
-}
-
-#div_id_username{
-    grid-area: username;
-}
-
-.errorlist{
-    grid-area: error_user;
-}
-
-#div_id_password1{
-    grid-area: pwd1;
-}
-
-#div_id_password1 .error{
-    grid-area: error_pwd1;
-}
-
-#div_id_password2{
-    grid-area: pwd2;
-}
-
-#div_id_password2 .error{
-    grid-area: error_pwd2;
-}
-
-input{
+#signup__form input{
+    transform: translate(-50%, 0%);
+    width : 300px;
     padding: 0.3rem;
     margin: 0.5rem;
-    width:200px;
+}
+
+.help-block{
+    color: red;
+    margin: 0rem;
 }
 
 .signup__button{
@@ -63,4 +34,3 @@ input{
     width: auto;
     padding:0.5rem;
 }
-
