--- a/litreview/authentication/templates/authentication/signup.html
+++ b/litreview/authentication/templates/authentication/signup.html
@@ -11,11 +11,8 @@
 
 {% block content %}
     <p class="signup__title">Inscrivez-vous</p>
-    <form id="signup__form", method="post">
-        {% csrf_token %}
-        {{ form | crispy }}
-    </form>
-    
+    {% crispy form %}
+
     <div class="signup__button">
         <a href="{% url 'login'%}">
             <button class="button signup__return"
