--- a/litreview/authentication/templates/authentication/login.html
+++ b/litreview/authentication/templates/authentication/login.html
@@ -11,12 +11,12 @@
 
 {% block content %}
     <p>{{message}}</p>
-    {% crispy form %}
+    {% crispy form form.helper %}
     
     <div class="login__signup">
         <div class="login__signup__text">Pas encore membre ? </div>
         <a href="{% url 'signup' %}">
-                <button type:"button">Inscrivez-vous maintenant !</button>
+                <button type="button" class="login__signup__button button">Inscrivez-vous maintenant !</button>
         </a>
     </div>
 {% endblock content %}
