login page css adjustment

--- a/litreview/website/static/website/styles.css
+++ b/litreview/website/static/website/styles.css
@@ -34,7 +34,7 @@ button, .button{
     border-radius: 5px;
 }
 
-button:hover{
+button:hover, .button:hover{
     background-color: black;
     color:white;
 }
