--- a/litreview/network/templates/network/subscription.html
+++ b/litreview/network/templates/network/subscription.html
@@ -14,7 +14,7 @@
     <div class="subscription__form title">Abonnements</div>
     {% for followed_user in followed_users %}
         <div class='label__unfollow__{{forloop.counter}}'>{{followed_user}}</div>
-        <a class='unfollow__link__{{forloop.counter}}', hlink="unfollow/?id={{followed_user.id}}">
+        <a class='unfollow__link__{{forloop.counter}}', hlink="{% url 'network:unfollow' username=user.username %}?id={{followed_user.id}}">
             <button class='unfollow__button button'>Se désabonner</button>
         </a>
         {% endfor %} 
