--- a/litreview/network/templates/network/subscription.html
+++ b/litreview/network/templates/network/subscription.html
@@ -10,6 +10,9 @@
 {% block content %}
     <div class="search__box__form title">Suivre d'autres utilisateurs</div>
     {% crispy searchbox_form searchbox_form.helper %}
+    {% for message in search_messages %}
+        <div class="error error__message">{{message}}</div>
+    {% endfor %}
     
     <div class="subscription__form title">Abonnements</div>
     {% for followed_user in followed_users %}
@@ -17,7 +20,7 @@
         <a class='unfollow__link__{{forloop.counter}}', href="{% url 'network:unfollow' username=user.username %}?id={{followed_user.id}}">
             <button class='unfollow__button button' type="submit">Se désabonner</button>
         </a>
-        {% endfor %} 
+    {% endfor %} 
     
     <div class="followers__list title">Abonnés</div>
     {% for user in followers %}
