--- a/litreview/network/templates/network/subscription.html
+++ b/litreview/network/templates/network/subscription.html
@@ -8,23 +8,31 @@
 {% endblock %}
 
 {% block content %}
-    <div class="search__box__form title">Suivre d'autres utilisateurs</div>
-    {% crispy searchbox_form searchbox_form.helper %}
-    {% for message in search_messages %}
-        <div class="error error__message">{{message}}</div>
-    {% endfor %}
+    <div class="search__box__container">
+        <div class="search__box__form title">Suivre d'autres utilisateurs</div>
+        {% crispy searchbox_form searchbox_form.helper %}
+        {% for message in search_messages %}
+            <div class="error error__message">{{message}}</div>
+        {% endfor %}
+    </div>
+
+    <div class="subscription__container">
+        <div class="subscription__form title">Abonnements</div>
+        {% for followed_user in followed_users %}
+            <div class="user__container">
+                <div class='label label__unfollow__{{forloop.counter}}'>{{followed_user}}</div>
+                <a class='unfollow__link__{{forloop.counter}}', href="{% url 'network:unfollow' username=user.username %}?id={{followed_user.id}}">
+                    <button class='unfollow__button button' type="submit">Se désabonner</button>
+                </a>
+            </div>
+        {% endfor %} 
+    </div>
     
-    <div class="subscription__form title">Abonnements</div>
-    {% for followed_user in followed_users %}
-        <div class='label__unfollow__{{forloop.counter}}'>{{followed_user}}</div>
-        <a class='unfollow__link__{{forloop.counter}}', href="{% url 'network:unfollow' username=user.username %}?id={{followed_user.id}}">
-            <button class='unfollow__button button' type="submit">Se désabonner</button>
-        </a>
-    {% endfor %} 
-    
-    <div class="followers__list title">Abonnés</div>
-    {% for user in followers %}
-        <div>{{ user }}</div>
-    {% endfor %}
+    <div class="followers__container">
+        <div class="followers__list title">Abonnés</div>
+        {% for user in followers %}
+            <div>{{ user }}</div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
