--- a/litreview/network/static/network/subscription.css
+++ b/litreview/network/static/network/subscription.css
@@ -1,35 +1,80 @@
+.search__box__container, 
+.subscription__container, 
+.followers__container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width:80%;
+    margin-left: auto;
+    margin-right:auto;
+}
+
+/* ------------- Search part ------------- */
+
 .title{
     font-weight: bolder;
+    margin: auto;
     font-size: larger;
-    margin: 0.5rem;
+    margin-top: 2.5rem;
+    text-align:center;
 }
 
 #search__user__form{
-    margin-left: 0.5rem;
     display: flex;
+    align-items: center;
+    margin-left: 0.5rem;
     flex-direction: row;
+    width:100%;
 }
 
 #div_id_username{
-    width: 80%;
+    width: auto;
+    flex-grow: 20;
+    padding: 0.5rem;
 }
 
 #id_username{
-    width: 100%;
+    width:100%;
 }
+
+#id_username::placeholder{
+    text-align: center;
+}
+
+.form_actions{
+    flex-grow: 1;
+}
+
+.error{
+    font-weight: bolder;
+    color: red;
+}
+
+.error::before, .error::after{
+    content: url("/static/network/warning.svg"); 
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+    transform: translate(0px, 0.1rem);
+}
+
+/* ------------- Subscription part ------------- */
 
 .label {
     display: flex;
     border: 1px black solid;
     border-radius: 5px;
-    width: 80%;
+    width: 100%;
+    
     text-align: start;
     vertical-align: middle;
     align-items: center;
     padding: 0.5rem;
 }
 
-.label::after, #search__user__form::after {
+.label::after {
     content: "";
     clear: both;
     display: table;
@@ -42,7 +87,10 @@ input#id_username{
 .user__container{
     display: flex;
     flex-direction: row; 
-    margin: 0.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    gap:0.5rem;
+    width:100%;
 }
 
 a {
@@ -51,5 +99,6 @@ a {
 
 .unfollow__button, .button {
     width:100%;
-    margin: 0rem 0.5rem 0rem 0.5rem;
+    max-width: 300px;
+    min-width:150px
 }
