--- a/litreview/website/templates/website/feed.html
+++ b/litreview/website/templates/website/feed.html
@@ -13,10 +13,10 @@
 
 {% block content %}
     <div class="feed__button">
-        <a href={% url 'create_ticket' %} class="feed__ticket__link">
+        <a href={% url 'create_ticket' user.username%} class="feed__ticket__link">
             <button id="feed__ticket" type="button">Demander une critique</button>
         </a>
-        <a href={% url 'create_review' %} class="feed__review__link">
+        <a href={% url 'create_ticket' user.username%} class="feed__review__link">
             <button id="feed__review" type="button">Créer une critique</button>
         </a>
     </div>
