add picture preview in ticket creation

--- a/litreview/creation/templates/creation/ticket_creation.html
+++ b/litreview/creation/templates/creation/ticket_creation.html
@@ -17,4 +17,15 @@
 {% endblock %}
 
 {% block extrafooter %}
+<script type="text/javascript">
+
+    function PreviewImage() {
+        var oFReader = new FileReader();
+        oFReader.readAsDataURL(document.getElementById("id_image").files[0]);
+
+        oFReader.onload = function (oFREvent) {
+            document.getElementById("uploadPreview").src = oFREvent.target.result;
+        };
+    };
+</script>
 {% endblock %}
