implementation of review creation

--- a/litreview/website/templates/website/feed.html
+++ b/litreview/website/templates/website/feed.html
@@ -16,7 +16,7 @@
         <a href={% url 'create_ticket' user.username%} class="feed__ticket__link">
             <button id="feed__ticket" type="button">Demander une critique</button>
         </a>
-        <a href={% url 'create_ticket' user.username%} class="feed__review__link">
+        <a href={% url 'create_review' user.username%} class="feed__review__link">
             <button id="feed__review" type="button">Créer une critique</button>
         </a>
     </div>
