--- a/litreview/creation/templates/creation/review_creation.html
+++ b/litreview/creation/templates/creation/review_creation.html
@@ -14,7 +14,6 @@
 
 {% block content %}
     <form action="" method="post" enctype="multipart/form-data">
-        {% comment %} {% csrf %} {% endcomment %}
         <div class="ticket">
             <p>{{ticket_title}}</p>
             {% crispy ticket_form %}
@@ -33,14 +32,17 @@
 
 {% block extrafooter %}
 <script type="text/javascript">
-
     function PreviewImage() {
         var oFReader = new FileReader();
         oFReader.readAsDataURL(document.getElementById("id_image").files[0]);
-
         oFReader.onload = function (oFREvent) {
             document.getElementById("uploadPreview").src = oFREvent.target.result;
         };
     };
+
+    document.addEventListener("DOMContentLoaded", function(){
+        url_initial_image = document.querySelector("#div_id_image a").href;
+        document.getElementById("uploadPreview").src = url_initial_image
+    });
 </script>
 {% endblock %}
