--- a/litreview/website/templates/website/ticket_snippet.html
+++ b/litreview/website/templates/website/ticket_snippet.html
@@ -1,3 +1,5 @@
+
+
 <div>
     <div class="ticket__header">
         <div class="ticket__user">
@@ -19,7 +21,9 @@
         </div>
         {% if not post.user_reviewed_ticket %}
             <div class="ticket__review__button">
-                <button id="review__button" type="button">Créer une critique</button>
+                <a href="{% url 'create_review' post.user %}?id={{post.id}}">
+                    <button id="review__button" type="button" action=>Créer une critique</button>
+                </a>
             </div>
         {% endif %}
     </div>
