--- a/litreview/website/templates/website/main.html
+++ b/litreview/website/templates/website/main.html
@@ -18,6 +18,7 @@
             {% block title %}{{name}}{% endblock %}
         </title>
         <link rel="stylesheet" href="{% static 'website/styles.css' %}" type="text/css" />
+        <link rel="shortcut icon" type="image/png" href="{% static 'website/favicon.ico' %}"/>
         {% block extrahead %}{% endblock %}
     </head>
 
