--- a/litreview/creation/templates/creation/review_creation.html
+++ b/litreview/creation/templates/creation/review_creation.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <form action="" method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data">
         <div class="ticket">
             <p>{{ticket_title}}</p>
             {% crispy ticket_form %}
